Wed May  6 14:19:12 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/ir/StringValue.java -> Str.java

	* net/loveruby/cflat/ir/IntValue.java -> Int.java

	* net/loveruby/cflat/ir/IRVisitor.java: ditto.

	* net/loveruby/cflat/compiler/IRGenerator.java: ditto.

	* net/loveruby/cflat/compiler/CodeGenerator.java: ditto.

Mon May  4 19:00:33 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/LocalResolver.java: create
	  ToplevelScope, ConstantTable here (instead of creating them in
	  AST).

	* net/loveruby/cflat/ast/AST.java: do not create ToplevelScope,
	  ConstantTable by myself.

Sun May  3 22:17:57 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: new method dumpExpr
	  to dump single expression.

	* net/loveruby/cflat/compiler/CompilerMode.java: add enum value
	  DumpExpr: define new option --dump-expr.

Sun May  3 19:08:07 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/parser/Parser.jj: sizeof TYPE requires one
	  more lookahead because EXPR of "sizeof EXPR" may have parentheses,
	  too.  We can distinguish type and expr by 1 look ahead, because
	  Head of type() == head of typeref() == head of typeref_base().
	  typeref_base has unique terminal on head.

Sat May  2 09:49:23 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java: refactoring: rename
	  constant: programId -> ProgramName.

	* net/loveruby/cflat/compiler/Options.java: ditto.

Sat May  2 09:30:51 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/Compiler.java (commandMain):
	  refactoring: extract method: #buildTarget.

Thu Apr 30 22:53:10 2009  Minero Aoki  <aamine@loveruby.net>

	* net/loveruby/cflat/compiler/CodeGenerator.java: remove unused
	  method #doesSpillDX.

	* net/loveruby/cflat/compiler/CodeGenerator.java: add "left"
	  argument to #compileBinaryOp.

Thu Apr 30 22:19:12 2009  Minero Aoki  <aamine@loveruby.net>
